# autarch

./: .gitattributes  Cargo.toml  README.md  precious.toml
.github/workflows/: regenerate.yml
generator/: README.md
graphql/: github_queries.graphql
src/: convert.rs  github_queries.rs  main.rs
