[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
graphql_client = { version = "0.12.0", features = ["reqwest"] }
human_bytes = "0.4.1"
itertools = "0.10.5"
lastfm-rs = "0.5.0"
once_cell = "1.17.1"
reqwest = "0.11.16"
rss = "2.0.3"
serde = "1.0.160"
serde_derive = "1.0.160"
tinytemplate = "1.2.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
urlencoding = "2.1.2"
