[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
human_bytes = "0.4.3"
itertools = "0.12.0"
lastfm-rs = "0.5.0"
once_cell = "1.19.0"
reqwest = "0.11.23"
rss = "2.0.6"
serde = "1.0.193"
serde_derive = "1.0.193"
tinytemplate = "1.2.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
