[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
human_bytes = "0.4.3"
itertools = "0.12.1"
lastfm-rs = "0.5.0"
once_cell = "1.19.0"
reqwest = "0.11.24"
rss = "2.0.7"
serde = "1.0.196"
serde_derive = "1.0.196"
tinytemplate = "1.2.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
